--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
      <div>
   <form id="contact-form"
       class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3"
-      action="/api/contact"
+      action="https://formsubmit.co/contacto@leycura.org"
       method="POST">
   <div>
     <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
@@ -688,86 +688,91 @@ navInfoLinks.forEach(link => {
 
   });
 
-// --- FORMULARIO CONTACTO (USANDO /api/contact) ---
-const formContact = document.getElementById('contact-form');
-const modalContact = document.getElementById('success-modal');
-const cardContact  = modalContact ? modalContact.querySelector('.modal-card') : null;
-const okBtnContact = document.getElementById('success-modal-ok');
 
-function abrirModalContact() {
-  if (!modalContact) return;
-  modalContact.classList.remove('hidden');
-  requestAnimationFrame(() => {
-    modalContact.classList.add('show');
-    if (cardContact) cardContact.classList.add('show');
-  });
-}
+  // --- FORMULARIO CONTACTO (USANDO /api/contact + FormSubmit) ---
+  const formContact = document.getElementById('contact-form');
+  const modalContact = document.getElementById('success-modal');
+  const cardContact  = modalContact ? modalContact.querySelector('.modal-card') : null;
+  const okBtnContact = document.getElementById('success-modal-ok');
 
-function cerrarModalContact() {
-  if (!modalContact) return;
-  modalContact.classList.remove('show');
-  if (cardContact) cardContact.classList.remove('show');
-  setTimeout(() => { modalContact.classList.add('hidden'); }, 250);
-}
+  function abrirModalContact() {
+    if (!modalContact) return;
+    modalContact.classList.remove('hidden');
+    requestAnimationFrame(() => {
+      modalContact.classList.add('show');
+      if (cardContact) cardContact.classList.add('show');
+    });
+  }
 
-if (formContact && modalContact && okBtnContact) {
-  formContact.addEventListener('submit', async function (e) {
-    e.preventDefault();
+  function cerrarModalContact() {
+    if (!modalContact) return;
+    modalContact.classList.remove('show');
+    if (cardContact) cardContact.classList.remove('show');
+    setTimeout(() => { modalContact.classList.add('hidden'); }, 250);
+  }
 
-    const submitBtn = formContact.querySelector('button[type="submit"]');
-    const originalText = submitBtn ? submitBtn.textContent : '';
-    if (submitBtn) {
-      submitBtn.disabled = true;
-      submitBtn.textContent = 'Enviando…';
-    }
+  if (formContact && modalContact && okBtnContact) {
+    formContact.addEventListener('submit', async function (e) {
+      e.preventDefault();
 
-    try {
-      const formData = new FormData(formContact);
-
-      // Para Brevo (API interna)
-      const bodyBrevo = {
-        email:   formData.get('email')   || '',
-        nombre:  formData.get('nombre')  || '',
-        mensaje: formData.get('mensaje') || ''
-      };
-
-      const brevoPromise = fetch('/api/contact', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(bodyBrevo)
-      });
-
-      // Para que te llegue el correo por FormSubmit
-      const formSubmitPromise = fetch(formContact.action, {
-        method: 'POST',
-        headers: { 'Accept': 'application/json' },
-        body: formData
-      });
-
-      const [brevoRes, fsRes] = await Promise.all([brevoPromise, formSubmitPromise]);
-
-      if (!brevoRes.ok || !fsRes.ok) {
-        throw new Error('Error en alguno de los envíos');
-      }
-
-      formContact.reset();
-      abrirModalContact();
-    } catch (err) {
-      console.error('Error en envío contacto:', err);
-      alert('Ocurrió un error. Intentá nuevamente.');
-    } finally {
+      const submitBtn = formContact.querySelector('button[type="submit"]');
+      const originalText = submitBtn ? submitBtn.textContent : '';
       if (submitBtn) {
-        submitBtn.disabled = false;
-        submitBtn.textContent = originalText;
+        submitBtn.disabled = true;
+        submitBtn.textContent = 'Enviando…';
       }
-    }
-  });
 
-  okBtnContact.addEventListener('click', cerrarModalContact);
-  modalContact.addEventListener('click', function (e) {
-    if (e.target === modalContact) cerrarModalContact();
-  });
-}
+      try {
+        const formData = new FormData(formContact);
+
+        // 1) Enviar a Brevo (no rompe la UI si falla)
+        const bodyBrevo = {
+          email:   formData.get('email')   || '',
+          nombre:  formData.get('nombre')  || ''
+          // mensaje: formData.get('mensaje') || ''  // si más adelante lo usás en la API
+        };
+
+        const brevoPromise = fetch('/api/contact', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(bodyBrevo)
+        }).catch(() => null);  // si falla, lo ignoro para no mostrar error al usuario
+
+        // 2) Enviar a FormSubmit para que llegue el mail
+        const formSubmitPromise = fetch(formContact.action, {
+          method: 'POST',
+          headers: { 'Accept': 'application/json' },
+          body: formData
+        });
+
+        const fsRes = await formSubmitPromise;
+
+        // Espero Brevo en paralelo sin frenar la UI
+        brevoPromise && brevoPromise.then(() => {}).catch(() => {});
+
+        if (!fsRes.ok) {
+          throw new Error('Error al enviar el formulario');
+        }
+
+        formContact.reset();
+        abrirModalContact();
+      } catch (err) {
+        console.error('Error en envío contacto:', err);
+        alert('Ocurrió un error. Intentá nuevamente.');
+      } finally {
+        if (submitBtn) {
+          submitBtn.disabled = false;
+          submitBtn.textContent = originalText;
+        }
+      }
+    });
+
+    okBtnContact.addEventListener('click', cerrarModalContact);
+    modalContact.addEventListener('click', function (e) {
+      if (e.target === modalContact) cerrarModalContact();
+    });
+  }
+
 
 
   // --- FORMULARIO SUMATE (ORIGINAL) ---
