--- a/index.html
+++ b/index.html
@@ -434,25 +434,41 @@
         </div>
 
      <div>
-  <form id="contact-form"
+ <form id="contact-form"
       class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3"
-      action="https://formsubmit.co/contacto@leycura.org"
+      action="https://formsubmit.co/ajax/contacto@leycura.org"
       method="POST">
   <div>
     <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
-    <input type="text" name="nombre" class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary" />
+    <input type="text" name="nombre"
+           class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
   </div>
+
   <div>
     <label class="block text-xs font-medium text-cura-accentLight mb-1">Correo electrónico *</label>
-    <input type="email" required name="email" class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary" />
+    <input type="email" required name="email"
+           class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
   </div>
+
   <div>
     <label class="block text-xs font-medium text-cura-accentLight mb-1">Mensaje</label>
-    <textarea rows="4" name="mensaje" class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary"></textarea>
+    <textarea rows="4" name="mensaje"
+              class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"></textarea>
   </div>
-  <button type="submit" class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">Enviar</button>
-  <p class="text-[10px] text-cura-accentLight mt-1">Este formulario envía tu mensaje directamente al equipo de Ley C.U.R.A.</p>
+
+  <!-- Opcionales, pero recomendables -->
+  <input type="hidden" name="_subject" value="Nuevo mensaje desde el formulario de contacto - LeyCURA.org">
+  <input type="hidden" name="_captcha" value="false">
+
+  <button type="submit"
+          class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
+    Enviar
+  </button>
+  <p class="text-[10px] text-cura-accentLight mt-1">
+    Este formulario envía tu mensaje directamente al equipo de Ley C.U.R.A.
+  </p>
 </form>
+
 
 
   <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md block md:hidden mt-6">
@@ -689,90 +705,86 @@ navInfoLinks.forEach(link => {
   });
 
 
-  // --- FORMULARIO CONTACTO (USANDO /api/contact + FormSubmit) ---
-  const formContact = document.getElementById('contact-form');
-  const modalContact = document.getElementById('success-modal');
-  const cardContact  = modalContact ? modalContact.querySelector('.modal-card') : null;
-  const okBtnContact = document.getElementById('success-modal-ok');
+ // --- FORMULARIO CONTACTO (USANDO /api/contact + FormSubmit) ---
+const formContact = document.getElementById('contact-form');
+const modalContact = document.getElementById('success-modal');
+const cardContact  = modalContact ? modalContact.querySelector('.modal-card') : null;
+const okBtnContact = document.getElementById('success-modal-ok');
 
-  function abrirModalContact() {
-    if (!modalContact) return;
-    modalContact.classList.remove('hidden');
-    requestAnimationFrame(() => {
-      modalContact.classList.add('show');
-      if (cardContact) cardContact.classList.add('show');
-    });
-  }
+function abrirModalContact() {
+  if (!modalContact) return;
+  modalContact.classList.remove('hidden');
+  requestAnimationFrame(() => {
+    modalContact.classList.add('show');
+    if (cardContact) cardContact.classList.add('show');
+  });
+}
 
-  function cerrarModalContact() {
-    if (!modalContact) return;
-    modalContact.classList.remove('show');
-    if (cardContact) cardContact.classList.remove('show');
-    setTimeout(() => { modalContact.classList.add('hidden'); }, 250);
-  }
+function cerrarModalContact() {
+  if (!modalContact) return;
+  modalContact.classList.remove('show');
+  if (cardContact) cardContact.classList.remove('show');
+  setTimeout(() => { modalContact.classList.add('hidden'); }, 250);
+}
 
-  if (formContact && modalContact && okBtnContact) {
-    formContact.addEventListener('submit', async function (e) {
-      e.preventDefault();
+if (formContact && modalContact && okBtnContact) {
+  formContact.addEventListener('submit', async function (e) {
+    e.preventDefault();
 
-      const submitBtn = formContact.querySelector('button[type="submit"]');
-      const originalText = submitBtn ? submitBtn.textContent : '';
+    const submitBtn = formContact.querySelector('button[type="submit"]');
+    const originalText = submitBtn ? submitBtn.textContent : '';
+    if (submitBtn) {
+      submitBtn.disabled = true;
+      submitBtn.textContent = 'Enviando…';
+    }
+
+    try {
+      const formData = new FormData(formContact);
+
+      // 1) Enviar a tu API interna => Brevo
+      const bodyBrevo = {
+        email:   formData.get('email')   || '',
+        nombre:  formData.get('nombre')  || '',
+        mensaje: formData.get('mensaje') || ''
+      };
+
+      const brevoPromise = fetch('/api/contact', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(bodyBrevo)
+      });
+
+      // 2) Enviar a FormSubmit => email a contacto@leycura.org
+      const formSubmitPromise = fetch(formContact.action, {
+        method: 'POST',
+        headers: { 'Accept': 'application/json' },
+        body: formData
+      });
+
+      const [brevoRes, fsRes] = await Promise.all([brevoPromise, formSubmitPromise]);
+
+      if (!brevoRes.ok || !fsRes.ok) {
+        throw new Error('Error en alguno de los envíos');
+      }
+
+      formContact.reset();
+      abrirModalContact();
+    } catch (err) {
+      console.error('Error en envío contacto:', err);
+      alert('Ocurrió un error. Intentá nuevamente.');
+    } finally {
       if (submitBtn) {
-        submitBtn.disabled = true;
-        submitBtn.textContent = 'Enviando…';
+        submitBtn.disabled = false;
+        submitBtn.textContent = originalText;
       }
+    }
+  });
 
-      try {
-        const formData = new FormData(formContact);
-
-        // 1) Enviar a Brevo (no rompe la UI si falla)
-        const bodyBrevo = {
-          email:   formData.get('email')   || '',
-          nombre:  formData.get('nombre')  || ''
-          // mensaje: formData.get('mensaje') || ''  // si más adelante lo usás en la API
-        };
-
-        const brevoPromise = fetch('/api/contact', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(bodyBrevo)
-        }).catch(() => null);  // si falla, lo ignoro para no mostrar error al usuario
-
-        // 2) Enviar a FormSubmit para que llegue el mail
-        const formSubmitPromise = fetch(formContact.action, {
-          method: 'POST',
-          headers: { 'Accept': 'application/json' },
-          body: formData
-        });
-
-        const fsRes = await formSubmitPromise;
-
-        // Espero Brevo en paralelo sin frenar la UI
-        brevoPromise && brevoPromise.then(() => {}).catch(() => {});
-
-        if (!fsRes.ok) {
-          throw new Error('Error al enviar el formulario');
-        }
-
-        formContact.reset();
-        abrirModalContact();
-      } catch (err) {
-        console.error('Error en envío contacto:', err);
-        alert('Ocurrió un error. Intentá nuevamente.');
-      } finally {
-        if (submitBtn) {
-          submitBtn.disabled = false;
-          submitBtn.textContent = originalText;
-        }
-      }
-    });
-
-    okBtnContact.addEventListener('click', cerrarModalContact);
-    modalContact.addEventListener('click', function (e) {
-      if (e.target === modalContact) cerrarModalContact();
-    });
-  }
-
+  okBtnContact.addEventListener('click', cerrarModalContact);
+  modalContact.addEventListener('click', function (e) {
+    if (e.target === modalContact) cerrarModalContact();
+  });
+}
 
 
   // --- FORMULARIO SUMATE (ORIGINAL) ---
