--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@
         </div>
 
      <div>
- <form id="contact-form"
+<form id="contact-form"
       class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3"
-      action="https://formsubmit.co/ajax/contacto@leycura.org"
+      action="/api/contact"
       method="POST">
   <div>
     <label class="block text-xs font-medium text-cura-accentLight mb-1">Nombre</label>
@@ -456,18 +456,16 @@
               class="w-full border border-cura-accent/40 rounded-md px-2 py-1.5 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent"></textarea>
   </div>
 
-  <!-- Opcionales, pero recomendables -->
-  <input type="hidden" name="_subject" value="Nuevo mensaje desde el formulario de contacto - LeyCURA.org">
-  <input type="hidden" name="_captcha" value="false">
-
   <button type="submit"
           class="w-full inline-flex justify-center items-center px-3 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">
     Enviar
   </button>
+
   <p class="text-[10px] text-cura-accentLight mt-1">
     Este formulario envía tu mensaje directamente al equipo de Ley C.U.R.A.
   </p>
 </form>
+
 
 
 
@@ -705,7 +703,7 @@ navInfoLinks.forEach(link => {
   });
 
 
- // --- FORMULARIO CONTACTO (USANDO /api/contact + FormSubmit) ---
+// --- FORMULARIO CONTACTO (solo /api/contact, sin FormSubmit) ---
 const formContact = document.getElementById('contact-form');
 const modalContact = document.getElementById('success-modal');
 const cardContact  = modalContact ? modalContact.querySelector('.modal-card') : null;
@@ -728,7 +726,7 @@ function cerrarModalContact() {
 }
 
 if (formContact && modalContact && okBtnContact) {
-  formContact.addEventListener('submit', async function (e) {
+  formContact.addEventListener('submit', async (e) => {
     e.preventDefault();
 
     const submitBtn = formContact.querySelector('button[type="submit"]');
@@ -741,30 +739,20 @@ if (formContact && modalContact && okBtnContact) {
     try {
       const formData = new FormData(formContact);
 
-      // 1) Enviar a tu API interna => Brevo
-      const bodyBrevo = {
-        email:   formData.get('email')   || '',
+      const body = {
         nombre:  formData.get('nombre')  || '',
+        email:   formData.get('email')   || '',
         mensaje: formData.get('mensaje') || ''
       };
 
-      const brevoPromise = fetch('/api/contact', {
+      const response = await fetch('/api/contact', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(bodyBrevo)
+        body: JSON.stringify(body)
       });
 
-      // 2) Enviar a FormSubmit => email a contacto@leycura.org
-      const formSubmitPromise = fetch(formContact.action, {
-        method: 'POST',
-        headers: { 'Accept': 'application/json' },
-        body: formData
-      });
-
-      const [brevoRes, fsRes] = await Promise.all([brevoPromise, formSubmitPromise]);
-
-      if (!brevoRes.ok || !fsRes.ok) {
-        throw new Error('Error en alguno de los envíos');
+      if (!response.ok) {
+        throw new Error('Error en /api/contact');
       }
 
       formContact.reset();
@@ -781,7 +769,7 @@ if (formContact && modalContact && okBtnContact) {
   });
 
   okBtnContact.addEventListener('click', cerrarModalContact);
-  modalContact.addEventListener('click', function (e) {
+  modalContact.addEventListener('click', (e) => {
     if (e.target === modalContact) cerrarModalContact();
   });
 }
