--- a/index.html
+++ b/index.html
@@ -337,9 +337,10 @@
         <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
       </div>
 
-  <form id="sumate-form"
-      action="https://formsubmit.co/contacto@leycura.org"
-      method="POST"
+ <form id="contact-form"
+      class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3"
+      action="/api/contact"
+      method="POST">
       class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
 
   <input type="hidden" name="_subject" value="Nuevo ciudadano sumado - LeyCURA">
