--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@
         <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
       </div>
 
-<form id="contact-form"
-      action="/api/contact"
-      method="POST">
+<form id="contact-form" action="/api/contact" method="POST">
+
 
 
   <input type="hidden" name="_subject" value="Nuevo ciudadano sumado - LeyCURA">
