--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
         <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
       </div>
 
-<form id="contact-form" action="/api/contact" method="POST">
+ <form id="sumate-form"
+      action="https://formsubmit.co/contacto@leycura.org"
+      method="POST"
 
 
 
