--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
  <form id="sumate-form"
       action="https://formsubmit.co/contacto@leycura.org"
-      method="POST"
+      method="POST">
 
 
 
