--- a/index.html
+++ b/index.html
@@ -331,15 +331,13 @@
 
 </section>
 <section>
-    <section id="sumate" class="space-y-6">
+     <section id="sumate" class="space-y-6">
       <div class="max-w-2xl">
         <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
         <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
       </div>
 
- <form id="sumate-form"
-      action="https://formsubmit.co/contacto@leycura.org"
-      method="POST">
+<form id="contact-form" action="/api/contact" method="POST">
 
 
 
@@ -413,7 +411,6 @@
         <p class="text-[10px] text-cura-accentLight mt-1">Los campos marcados con * son obligatorios.</p>
       </form>
     </section>
-
 
     <section id="contacto" class="space-y-6 mt-16">
       <div class="max-w-2xl">
