--- a/index.html
+++ b/index.html
@@ -331,15 +331,16 @@
 
 </section>
 <section>
-     <section id="sumate" class="space-y-6">
+    <section id="sumate" class="space-y-6">
       <div class="max-w-2xl">
         <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
         <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
       </div>
 
-<form id="contact-form" action="/api/contact" method="POST">
-
-
+  <form id="sumate-form"
+      action="https://formsubmit.co/contacto@leycura.org"
+      method="POST"
+      class="bg-cura-card border border-cura-accent/40 rounded-xl p-4 shadow-md space-y-3">
 
   <input type="hidden" name="_subject" value="Nuevo ciudadano sumado - LeyCURA">
   <input type="hidden" name="_template" value="box">
